# CCTV-Server

./: CMakeLists.txt  camera_viewer.cpp  main.cpp
camera_manager/: camra_manager_starter.cpp
camera_manager/config/: cameras.json
camera_manager/include/: camera_config_manager.hpp  camera_connection.hpp  camera_worker_manager.hpp
camera_manager/src/: camera_config_manager.cpp  camera_connection.cpp  camera_worker_manager.cpp
include/: camera_module.hpp  kafka_producer.hpp
src/: camera_module.cpp  kafka_producer.cpp  main.cpp
tests/: test_camera.cpp  test_producer.cpp
